修改连击提示

--- a/Linkup/res/values/strings.xml
+++ b/Linkup/res/values/strings.xml
@@ -21,5 +21,7 @@
     <string name="game_level_success_cancel">结束</string>
     <string name="game_level_success_ok">继续</string>
     <string name="game_level_success_ask">\n\n进入下一关？</string>
+    <string name="game_prompt_add">, 提示 +１</string>
+    <string name="game_refresh_add">, 重排 +１</string>
 
 </resources>
