优化弹出框

--- a/Linkup/res/values/strings.xml
+++ b/Linkup/res/values/strings.xml
@@ -6,22 +6,25 @@
     <string name="exit">退出</string>
     <string name="exit_info">您确定退出游戏吗？\n\n点错了，请选择[取消]</string>
     <string name="help">帮助</string>
-    <string name="help_info">将2个相同图案的对子连接起来，连接线不多于3根直线，就可以成功将对子消除。\n作者：白杨\n邮箱：csu_yzb@126.com</string>
+    <string name="help_info">将2个相同图案的对子连接起来,连接线不多于3根直线,就可以成功将对子消除。</string>
+    <string name="about">关于</string>
+    <string name="about_info">应用名：休闲连连看 \n版本号：1.2.2\n作  者：白杨\n邮  箱：csu_yzb@126.com\n源代码：https://github.com/csuyzb/AndroidLinkup</string>
     <string name="submit">确定</string>
     <string name="cancel">取消</string>
     <string name="game_success">恭喜你，游戏已通关！</string>
     <string name="max_score">最高分:</string>
-    <string name="game_score">游戏总得分:\t</string>
+    <string name="game_score">总得分:</string>
     <string name="game_level_lost">游戏失败！</string>
-    <string name="game_level_lost_cancel">结束</string>
+    <string name="game_level_lost_cancel">返回</string>
     <string name="game_level_lost_ok">再来</string>
     <string name="game_level_lost_ask">\n\n重新开始？</string>
     <string name="game_level_success">游戏胜利！</string>
-    <string name="game_level_success_cancel">结束</string>
+    <string name="game_level_success_cancel">返回</string>
     <string name="game_level_success_ok">继续</string>
     <string name="game_level_success_ask">\n\n进入下一关？</string>
     <string name="game_prompt_add">提示 +１</string>
     <string name="game_refresh_add">重排 +１</string>
+    <string name="game_reward_add">+１</string>
     <string name="game_ready_go">GO!</string>
     <string name="game_prompt_none">已经不能消除了，请重排或按返回退出!</string>
 
