增加计时和任务模式

--- a/Linkup/res/values/strings.xml
+++ b/Linkup/res/values/strings.xml
@@ -12,15 +12,23 @@
     <string name="submit">确定</string>
     <string name="cancel">取消</string>
     <string name="game_success">恭喜你，游戏已通关！</string>
-    <string name="max_score">最高分:</string>
+    <string name="game_level_record">记录:</string>
+    <string name="game_level_norecord">记录:无</string>
+    <string name="game_level_task">任务分:</string>
     <string name="game_score">总得分:</string>
-    <string name="game_level_lost">游戏失败！</string>
+    <string name="game_level_lost">闯关失败！</string>
     <string name="game_level_lost_cancel">返回</string>
     <string name="game_level_lost_ok">再来</string>
     <string name="game_level_lost_ask">\n\n重新开始？</string>
-    <string name="game_level_success">游戏胜利！</string>
+    <string name="game_level_success">闯关成功！</string>
     <string name="game_level_success_cancel">返回</string>
     <string name="game_level_success_ok">继续</string>
+    <string name="game_time_success">游戏胜利！</string>
+    <string name="game_time">游戏时间:</string>
+    <string name="game_time_min">最快记录:</string>
+    <string name="game_task_success">任务完成！</string>
+    <string name="game_task_score">游戏得分:</string>
+    <string name="game_task_taskscore">任务分:</string>
     <string name="game_level_success_ask">\n\n进入下一关？</string>
     <string name="game_prompt_add">提示 +１</string>
     <string name="game_refresh_add">重排 +１</string>
