--- a/Linkup/res/values/strings.xml
+++ b/Linkup/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="help">帮助</string>
     <string name="help_info">将2个相同图案的对子连接起来,连接线不多于3根直线,就可以成功将对子消除。</string>
     <string name="about">关于</string>
-    <string name="about_info">应用名：休闲连连看 \n版本号：1.2.4\n作  者：白杨,神保,艳峥\n邮  箱：csu_yzb@126.com\n源代码：https://github.com/csuyzb/AndroidLinkup</string>
+    <string name="about_info">应用名：休闲连连看 \n版本号：1.2.5\n作  者：白杨,神保,艳峥\n邮  箱：csu_yzb@126.com\n源代码：https://github.com/csuyzb/AndroidLinkup</string>
     <string name="submit">确定</string>
     <string name="cancel">取消</string>
     <string name="game_success">恭喜你，游戏已通关！</string>
@@ -43,5 +43,8 @@
     <string name="auth_cancel">授权操作已取消</string>
     <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
     <string name="user_hello">, 你好, 欢迎回来!</string>
+    <string name="share_score" formatted="false">我在[%s]的[%s]关卡中,闯关成功得到了[%s]分,快来挑战我吧!</string>
+    <string name="share_task" formatted="false">我在[%s]的[%s]关卡中，完成任务得到了[%s]分，快来挑战我吧！</string>
+    <string name="share_time" formatted="false">我在[%s]的[%s]关卡中，完成任务只用了[%s]秒，快来挑战我吧！</string>
 
 </resources>
