按钮增加说明

--- a/Linkup/res/values/strings.xml
+++ b/Linkup/res/values/strings.xml
@@ -5,24 +5,29 @@
     <string name="back_again">再按一次退出程序</string>
     <string name="exit">退出</string>
     <string name="exit_info">您确定退出游戏吗？\n\n点错了，请选择[取消]</string>
+    <string name="music">音乐</string>
+    <string name="sound">音效</string>
     <string name="help">帮助</string>
     <string name="help_info">将2个相同图案的对子连接起来,连接线不多于3根直线,就可以成功将对子消除。</string>
     <string name="about">关于</string>
     <string name="about_info">应用名：休闲连连看 \n版本号：1.2.5\n作  者：白杨,神保,艳峥\n邮  箱：csu_yzb@126.com\n源代码：https://github.com/csuyzb/AndroidLinkup</string>
     <string name="submit">确定</string>
     <string name="cancel">取消</string>
+    <string name="back">返回</string>
+    <string name="next">继续</string>
+    <string name="again">再来</string>
     <string name="game_success">恭喜你，游戏已通关！</string>
     <string name="game_level_record">记录:</string>
     <string name="game_level_norecord">记录:无</string>
     <string name="game_level_task">任务分:</string>
     <string name="game_score">总得分:</string>
     <string name="game_level_lost">闯关失败！</string>
-    <string name="game_level_lost_cancel">返回</string>
-    <string name="game_level_lost_ok">再来</string>
-    <string name="game_level_lost_ask">\n\n重新开始？</string>
+<!--     <string name="game_level_lost_cancel">返回</string> -->
+<!--     <string name="game_level_lost_ok">再来</string> -->
+<!--     <string name="game_level_lost_ask">\n\n重新开始？</string> -->
     <string name="game_level_success">闯关成功！</string>
-    <string name="game_level_success_cancel">返回</string>
-    <string name="game_level_success_ok">继续</string>
+<!--     <string name="game_level_success_cancel">返回</string> -->
+<!--     <string name="game_level_success_ok">继续</string> -->
     <string name="game_time_success">游戏胜利！</string>
     <string name="game_time">游戏时间:</string>
     <string name="game_time_min">最快记录:</string>
@@ -30,9 +35,9 @@
     <string name="game_task_fail">任务失败！</string>
     <string name="game_task_score">游戏得分:</string>
     <string name="game_task_taskscore">任务分:</string>
-    <string name="game_level_success_ask">\n\n进入下一关？</string>
-    <string name="game_prompt_add">提示 +１</string>
-    <string name="game_refresh_add">重排 +１</string>
+<!--     <string name="game_level_success_ask">\n\n进入下一关？</string> -->
+<!--     <string name="game_prompt_add">提示 +１</string> -->
+<!--     <string name="game_refresh_add">重排 +１</string> -->
     <string name="game_reward_add">+１</string>
     <string name="game_ready_go">GO!</string>
     <string name="game_prompt_none">已经不能消除了，请重排或按返回退出!</string>
