--- a/Linkup/res/values/strings.xml
+++ b/Linkup/res/values/strings.xml
@@ -6,9 +6,9 @@
     <string name="music">音乐</string>
     <string name="sound">音效</string>
     <string name="help">帮助</string>
-    <string name="help_info">将2个相同图案的对子连接起来,连接线不多于3根直线,就可以成功将对子消除。</string>
+    <string name="help_info">将2个相同的图片连接起来,连线不多于3根,就可以成功将图片消除。\n微博或QQ登录后可以参与网络排行,还能将成就分享到QQ、微博和微信等平台.</string>
     <string name="about">关于</string>
-    <string name="about_info">应用名：休闲连连看 \n版本号：1.2.5\n作  者：白杨,神保,艳峥\n邮  箱：csu_yzb@126.com\n源代码：https://github.com/csuyzb/AndroidLinkup</string>
+    <string name="about_info">应用名：休闲连连看 \n版本号：1.3.0\n作  者：白杨,神保,艳峥\n源代码：https://github.com/csuyzb/AndroidLinkup\n官方微信:xx-llk</string>
     <string name="submit">确定</string>
     <string name="cancel">取消</string>
     <string name="back">返回</string>
