--- a/Linkup/res/values/strings.xml
+++ b/Linkup/res/values/strings.xml
@@ -6,9 +6,9 @@
     <string name="music">音乐</string>
     <string name="sound">音效</string>
     <string name="help">帮助</string>
-    <string name="help_info">将2个相同的图片连接起来,连线不多于3根,就可以成功将图片消除。\n微博或QQ登录后可以参与网络排行,还能将成就分享到QQ、微博和微信等平台.</string>
+    <string name="help_info">将2个相同的图片连接起来,连线不多于3根,就可以成功将图片消除。\n微博或QQ登录后可以参与网络排行,还能将成就分享到微博,QQ空间和微信等平台。</string>
     <string name="about">关于</string>
-    <string name="about_info">应用名：休闲连连看 \n版本号：1.3.0\n作  者：白杨,神保,艳峥\n源代码：https://github.com/csuyzb/AndroidLinkup\n官方微信:xx-llk</string>
+    <string name="about_info">应用名称：休闲连连看 \n版本编号：1.3.0\n应用作者：白杨，神保\n官方微信：xx-llk\n官方主页：http://xxllk.aliapp.com</string>
     <string name="submit">确定</string>
     <string name="cancel">取消</string>
     <string name="back">返回</string>
@@ -42,5 +42,6 @@
     <string name="share_score" formatted="false">我在[%s]的[%s]关卡中,闯关成功得到了[%s]分,快来挑战我吧!</string>
     <string name="share_task" formatted="false">我在[%s]的[%s]关卡中,完成任务得到了[%s]分,快来挑战我吧!</string>
     <string name="share_time" formatted="false">我在[%s]的[%s]关卡中,完成任务只用了[%s]秒,快来挑战我吧!</string>
+    <string name="notice">微博/QQ登录后可参与网络排行@分享成就到微博/QQ空间/微信朋友圈@关注微信公众号xx-llk了解最新动态</string>
 
 </resources>
