增加消耗钻石强制解锁功能

--- a/Linkup/res/values/strings.xml
+++ b/Linkup/res/values/strings.xml
@@ -41,12 +41,14 @@
     <string name="share_score" formatted="false">我在[%s]的[%s]关卡中,闯关成功得到了[%s]分,快来挑战我吧!</string>
     <string name="share_task" formatted="false">我在[%s]的[%s]关卡中,完成任务得到了[%s]分,快来挑战我吧!</string>
     <string name="share_time" formatted="false">我在[%s]的[%s]关卡中,完成任务只用了[%s]秒,快来挑战我吧!</string>
-    <string name="notice">微博或QQ登录后可参与网络排行@可以分享成就到QQ,微博和微信@关注微信公众号xx-llk了解最新动态</string>
+    <string name="notice">微博或QQ登录后可参与网络排行@可以分享成就到QQ,微博和微信@消耗钻石可以强制解锁关卡</string>
     <string name="game_star">游戏评级:</string>
     <string name="game_get">游戏奖励:</string>
     <string name="game_fail">一时失手,再来一盘.</string>
     <string name="score_unit">分</string>
     <string name="time_unit">秒</string>
     <string name="login_award">获得每日登录奖励10钻石100金币</string>
+    <string name="unlock_title">强制解锁</string>
+    <string name="unlock_msg">\n您确认消耗[5]钻石强制解锁关卡[%s]吗?</string>
 
 </resources>
