--- a/Linkup/res/values/strings.xml
+++ b/Linkup/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="help">帮助</string>
     <string name="help_info">将2个相同的图片连接起来,连线不多于3根,就可以成功将图片消除。\n微博或QQ登录后可以参与网络排行,还能将成就分享到QQ,微博和微信等平台。</string>
     <string name="about">关于</string>
-    <string name="about_info">应用名称：休闲连连看 \n版本编号：1.3.3\n应用作者：白杨，神保\n官方微信：xx-llk\n官网：http://xxllk.aliapp.com</string>
+    <string name="about_info">应用名称：休闲连连看 \n版本编号：1.3.4\n应用作者：白杨，神保\n官方微信：xx-llk\n官网：http://xxllk.aliapp.com</string>
     <string name="submit">确定</string>
     <string name="cancel">取消</string>
     <string name="back">返回</string>
@@ -60,6 +60,7 @@
     <string name="select_rank">请选择游戏级别:</string>
     <string name="select_level">请选择游戏关卡:</string>
     <string name="top_search">排名</string>
-    
+    <string name="total_rank">总排名:</string>
+    <string name="total_rank_0">无</string>
 
 </resources>
