--- a/Linkup/res/values/strings.xml
+++ b/Linkup/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="help">帮助</string>
     <string name="help_info">将2个相同的图片连接起来,连线不多于3根,就可以成功将图片消除。\n微博或QQ登录后可以参与网络排行,还能将成就分享到QQ,微博和微信等平台。</string>
     <string name="about">关于</string>
-    <string name="about_info">应用名称：休闲连连看 \n版本编号：1.4.2\n应用作者：白杨，神保\n官方微信：xx-llk\n官网：http://xxllk.aliapp.com</string>
+    <string name="about_info">应用名称：休闲连连看 \n版本编号：1.4.3\n应用作者：白杨，神保\n官方微信：xx-llk\n官网：http://xxllk.aliapp.com</string>
     <string name="submit">确定</string>
     <string name="cancel">取消</string>
     <string name="back">返回</string>
@@ -37,10 +37,10 @@
     <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
     <string name="user_hello">, 你好!</string>
     <string name="share_comment">继续加油!</string>
-    <string name="share_score" formatted="false">我在[%s]的[%s]关卡中,闯关成功得到了[%s]分,快来挑战我吧!</string>
-    <string name="share_task" formatted="false">我在[%s]的[%s]关卡中,完成任务得到了[%s]分,快来挑战我吧!</string>
-    <string name="share_time" formatted="false">我在[%s]的[%s]关卡中,完成任务只用了[%s]秒,快来挑战我吧!</string>
-    <string name="notice">微博或QQ登录后可参与网络排行@可以分享成就到QQ,微博和微信@消耗钻石可以强制解锁关卡</string>
+    <string name="share_score" formatted="false">我在关卡[%s]中闯关成功得到[%s]分,一起来玩吧o(∩_∩)o!</string>
+    <string name="share_task" formatted="false">我在关卡[%s]中完成任务得到[%s]分,一起来玩吧o(∩_∩)o!</string>
+    <string name="share_time" formatted="false">我在关卡[%s]中完成任务只用[%s]秒,一起来玩吧o(∩_∩)o!</string>
+    <string name="notice">微博或QQ登录可参与网络排名@可以分享成就到QQ,微博和微信@消耗钻石可以强制解锁关卡@可以发送短信邀请好友一起闯关</string>
     <string name="game_star">游戏评级:</string>
     <string name="game_get">游戏奖励:</string>
     <string name="game_fail">一时失手,再来一盘.</string>
@@ -66,10 +66,11 @@
     <string name="info_qzone">QQ登录</string>
     <string name="info_known">我知道了</string>
     <string name="info_prompt">温馨提示</string>
-    <string name="info_message">游戏可以微博或QQ登录啦！\n1.每日登录获得钻石和金币奖励.\n2.钻石可以强制解锁任意关卡.\n3.参与网络排名，出现在英雄榜.\n4.新浪和腾讯开放接入安全无忧!</string>
+    <string name="info_message">***可以微博或QQ登录啦！***\n\n1.每日登录获得钻石和金币奖励.\n2.登录后可以强制解锁关卡.\n3.登录后可以参与网络排名.\n4.新浪和腾讯开放接入安全无忧.</string>
     <string name="tool_no_refresh">已经没有重排道具了，可以去玩玩闯关模式!</string>
     <string name="tool_no_prompt">已经没有提示道具了，可以去玩玩闯关模式!</string>
     <string name="tool_no_addtime">已经没有加分道具了，可以去玩玩闯关模式!</string>
     <string name="link_text"><a href="http://app.mi.com/detail/61473">支持作者，给个好评，谢谢！</a></string>
+    <string name="share_top_info">期待高手来挑战。。。</string>
 
 </resources>
