--- a/Linkup/res/values/strings.xml
+++ b/Linkup/res/values/strings.xml
@@ -72,5 +72,6 @@
     <string name="tool_no_addtime">已经没有加分道具了，可以去玩玩闯关模式!</string>
     <string name="link_text"><a href="http://app.mi.com/detail/61473">支持作者，给个好评，谢谢！</a></string>
     <string name="share_top_info">期待高手来挑战。。。</string>
+    <string name="top1_levels">排名第一关卡数:</string>
 
 </resources>
