--- a/Linkup/res/values/strings.xml
+++ b/Linkup/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="help">帮助</string>
     <string name="help_info">将2个相同的图片连接起来,连线不多于3根,就可以成功将图片消除。\n微博或QQ登录后可以参与网络排行,还能将成就分享到QQ,微博和微信等平台。</string>
     <string name="about">关于</string>
-    <string name="about_info">应用名称：休闲连连看 \n版本编号：1.4.5\n应用作者：白杨，青须\n官网：http://xxllk.aliapp.com</string>
+    <string name="about_info">应用名称：休闲连连看 \n版本编号：1.4.6\n应用作者：白杨，青须\n官网：http://xxllk.aliapp.com</string>
     <string name="submit">确定</string>
     <string name="cancel">取消</string>
     <string name="back">返回</string>
@@ -29,8 +29,8 @@
     <string name="game_task_taskscore">游戏任务:</string>
     <string name="game_ready_go">GO!</string>
     <string name="game_prompt_none">已经不能消除了，请重排或按返回退出.</string>
-    <string name="login_with_sina_weibo">新浪微博</string>
-    <string name="login_with_qzone">QQ空间</string>
+    <string name="login_with_sina_weibo">微博登录</string>
+    <string name="login_with_qzone">QQ登录</string>
     <string name="network_exception">登录失败，请检查网络设置。</string>
     <string name="logining">登录成功,欢迎回来!</string>
     <string name="auth_cancel">授权操作已取消</string>
