--- a/Linkup/res/values/strings.xml
+++ b/Linkup/res/values/strings.xml
@@ -29,8 +29,8 @@
     <string name="game_task_taskscore">游戏任务:</string>
     <string name="game_ready_go">GO!</string>
     <string name="game_prompt_none">已经不能消除了，请重排或按返回退出.</string>
-    <string name="login_with_sina_weibo">微博登录</string>
-    <string name="login_with_qzone">QQ登录</string>
+    <string name="login_with_sina_weibo">*微博登录*</string>
+    <string name="login_with_qzone">*QQ登录*</string>
     <string name="network_exception">登录失败，请检查网络设置。</string>
     <string name="logining">登录成功,欢迎回来!</string>
     <string name="auth_cancel">授权操作已取消</string>
@@ -54,7 +54,7 @@
     <string name="share_success">分享成功,奖励%s钻石!</string>
     <string name="top_net_error">获取数据失败,请检查网络设置!</string>
     <string name="top_data_error">获取或解析数据失败!</string>
-    <string name="level_title">关卡:[%s]</string>
+    <string name="level_title">%s</string>
     <string name="select_mode">请选择游戏模式:</string>
     <string name="select_rank">请选择游戏级别:</string>
     <string name="select_level">请选择游戏关卡:</string>
